# ProdigiMover

./: README.md
prodigimover/: CMakeLists.txt  package.xml
prodigimover_bringup/: CMakeLists.txt  package.xml
prodigimover_bringup/ardunio/firmware/lib/config/: prodigimover_base_config.h
prodigimover_bringup/ardunio/firmware/lib/ros_lib/prodigimover_msgs/: Imu.h  PID.h  Velocities.h
prodigimover_bringup/ardunio/firmware/lib/ros_lib/prodigimover_pid/: prodigimoverPID.h
prodigimover_bringup/ardunio/firmware/src/: prodigimover_base.ino
prodigimover_bringup/ardunio/firmware/src/prodigimover_base/: prodigimover_base.ino
prodigimover_bringup/include/: prodigimover_base.h
prodigimover_bringup/launch/: bringup.launch  bringup_with_lidar.launch  imu.launch  laser.launch
prodigimover_bringup/param/: ekf_robot_localization.yaml
prodigimover_bringup/src/: prodigimover_base.cpp  prodigimover_base_node.cpp
prodigimover_description/: CMakeLists.txt  package.xml
prodigimover_description/urdf/: prodigimover.urdf.xacro  prodigimover_base.xacro  prodigimover_camera.xacro  prodigimover_imu.xacro  prodigimover_inertia.xacro  prodigimover_lidar.xacro  prodigimover_skid_steer.xacro  prodigimover_wheel.xacro
prodigimover_msgs/: CMakeLists.txt  package.xml
prodigimover_simulation/: CMakeLists.txt  package.xml
prodigimover_simulation/launch/: empty_world.launch  raceway.launch  raceway_bringup.launch  rviz.launch  spawn.launch  workhouse.launch
prodigimover_simulation/rviz/: rviz_config.rviz
prodigimover_teleop/: CMakeLists.txt  package.xml
prodigimover_teleop/launch/: prodigimover_teleop.launch
prodigimover_teleop/nodes/: prodigimover_teleop_key  prodigimover_teleop_key.py
